<resources>
    <string name="app_name">TuitionApp</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="forget_password">Forgot password?</string>
    <string name="already_have_account">Already have an account</string>
    <string name="dont_have_account">Don\'t have an account</string>
    <string name="sign_up_label"><b>Sign Up</b></string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="class_hint">Class</string>
    <string name="name_hint">Name</string>
    <string name="save_btn">Save</string>
    <string name="spinner_prompt">Select Class</string>
    <!-- Nevi Menu-->
    <string name="navi_subject">Subjects</string>
    <string name="navi_notification">Notification</string>
    <string name="navi_profile">Profile</string>
    <string name="navi_logout">Log out</string>
    <string name="navi_schedule">Schedule</string>

    <string name="openDrawer">Open Drawer</string>
    <string name="closeDreawer">Close Drawer</string>

    <string-array name="class_array">
        <item>XI</item>
        <item>XII</item>       
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
