<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_info_collect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aleson.tuitionapp.activity.UserInfoCollectActivity">

    <ImageView
        android:id="@+id/user_profile_image"
        android:src="@drawable/defaultimage"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <LinearLayout
        android:layout_below="@id/user_profile_image"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:hint="@string/name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/class_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/save_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>





</RelativeLayout>
